<resources>
    <string name="app_name">微指道</string>
    <string name="app_back">在按一次退出客戶端</string>
    <string name="login_text_hint">请填写您的客户代码</string>
    <string name="login_password_hint">请填写您的手机号码</string>

    <string name="my_head">头像</string>
    <string name="my_name">名字</string>
    <string name="my_job">职位</string>
    <string name="my_sex">性别</string>
    <string name="my_phone">电话</string>
    <string name="my_account">读取主账号信息</string>


    <string name="setmy_name">设置名字</string>
    <string name="setmy_job">设置职位</string>
    <string name="setmy_sex">设置性别</string>
    <string name="setmy_phone">设置电话</string>


    <string name="home_title_real">实景方案</string>
    <string name="home_title_know">知道圈</string>
    <string name="home_title_my">我的风采</string>
    <string name="home_title_tale">指道传奇</string>
    <string name="home_title_shop">指道商城</string>


    <string name="know_contacts">通讯录</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
