<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/home_top_bg"
    android:orientation="vertical" >
    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <include
        android:id="@id/contentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/home_top"/>

    <FrameLayout
        android:background="@color/colorWihte"
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </FrameLayout>

    <View
        android:id="@+id/item_line"

        android:layout_width="match_parent"
        android:layout_height="0.5px"
        android:background="@color/colorTextGray"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x100"
        android:background="@mipmap/home_bottom_bg" >

        <RelativeLayout
            android:layout_marginTop="@dimen/x12"
            android:layout_marginBottom="@dimen/x9"
            android:gravity="center"
            android:id="@+id/verify_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

                <ImageView
                    android:layout_centerHorizontal="true"
                    android:id="@+id/verify_image"
                    android:layout_width="@dimen/x45"
                    android:layout_height="@dimen/x45"

                    android:src="@mipmap/home_sj_unselect"/>

            <TextView
                android:layout_marginTop="@dimen/x9"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/verify_image"
                android:id="@+id/verify_text"
                android:textSize="@dimen/x18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_title_real"
               />
        </RelativeLayout>



        <RelativeLayout

            android:layout_marginTop="@dimen/x12"
            android:layout_marginBottom="@dimen/x9"
            android:gravity="center"
            android:id="@+id/sign_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
                <ImageView

                    android:id="@+id/sign_image"
                    android:layout_width="@dimen/x45"
                    android:layout_height="@dimen/x45"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/home_shop_unselect" />

            <TextView
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/x18"
                android:layout_marginTop="@dimen/x9"
                android:layout_below="@+id/sign_image"
                android:id="@+id/sign_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/home_title_shop"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_marginTop="@dimen/x12"
            android:layout_marginBottom="@dimen/x9"
            android:gravity="center"
            android:id="@+id/video_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

                <ImageView
                    android:layout_centerHorizontal="true"

                    android:id="@+id/video_image"
                    android:layout_width="@dimen/x45"
                    android:layout_height="@dimen/x45"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/home_know_unselect" />

            <TextView
                android:textSize="@dimen/x18"
                android:layout_marginTop="@dimen/x9"
                android:layout_below="@+id/video_image"
                android:layout_centerHorizontal="true"
                android:id="@+id/video_text"
                android:text="@string/home_title_know"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
           />

        </RelativeLayout>



        <RelativeLayout
            android:layout_marginTop="@dimen/x12"
            android:layout_marginBottom="@dimen/x9"
            android:gravity="center"
            android:id="@+id/flight_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

                <ImageView
                    android:layout_centerHorizontal="true"
                    android:id="@+id/flight_image"
                    android:layout_width="@dimen/x45"
                    android:layout_height="@dimen/x45"
                    android:src="@mipmap/home_cq_unselect" />

            <TextView
                android:textSize="@dimen/x18"
                android:layout_marginTop="@dimen/x9"
                android:layout_below="@+id/flight_image"
                android:layout_centerHorizontal="true"
                android:id="@+id/flight_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/home_title_tale"
              />
        </RelativeLayout>


        <RelativeLayout
            android:layout_marginTop="@dimen/x12"
            android:layout_marginBottom="@dimen/x9"
            android:gravity="center"
            android:id="@+id/account_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
                <ImageView
                    android:layout_centerHorizontal="true"
                    android:id="@+id/account_image"
                    android:layout_width="@dimen/x45"
                    android:layout_height="@dimen/x45"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/home_my_unselect" />

            <TextView

                android:textSize="@dimen/x18"
                android:layout_marginTop="@dimen/x9"
                android:layout_below="@+id/account_image"
                android:layout_centerHorizontal="true"
                android:id="@+id/account_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/home_title_my"
               />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>